Update image URL for hot chocolate item

--- a/Index.html
+++ b/Index.html
@@ -1875,7 +1875,7 @@
                 description: 'Rich hot chocolate with chocolate sauce and brownie toppings. Served in an edible chocolate cup.',
                 descriptionMr: 'à¤šà¥‰à¤•à¤²à¥‡à¤Ÿ à¤¸à¥‰à¤¸ à¤†à¤£à¤¿ à¤¬à¥à¤°à¤¾à¤‰à¤¨à¥€ à¤Ÿà¥‰à¤ªà¤¿à¤‚à¤—à¤¸à¤¹ à¤¸à¤®à¥ƒà¤¦à¥à¤§ à¤¹à¥‰à¤Ÿ à¤šà¥‰à¤•à¤²à¥‡à¤Ÿ. à¤–à¤¾à¤£à¥à¤¯à¤¾à¤¯à¥‹à¤—à¥à¤¯ à¤šà¥‰à¤•à¤²à¥‡à¤Ÿ à¤•à¤ªà¤®à¤§à¥à¤¯à¥‡ à¤¸à¤°à¥à¤µà¥à¤¹ à¤•à¥‡à¤²à¥‡.',
                 price: 50,
-                image: 'https://drive.google.com/uc?id=1229bi5PdK_keXYsS_-zSn--u3Bs7h8RQ',
+                image: 'https://images.unsplash.com/photo-1572490122747-3968b75cc699?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80',
                 badges: ['popular'],
                 hasSweetness: false
             },
