Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -1875,7 +1875,7 @@
                 description: 'Rich hot chocolate with chocolate sauce and brownie toppings. Served in an edible chocolate cup.',
                 descriptionMr: 'चॉकलेट सॉस आणि ब्राउनी टॉपिंगसह समृद्ध हॉट चॉकलेट. खाण्यायोग्य चॉकलेट कपमध्ये सर्व्ह केले.',
                 price: 50,
-                image: 'https://images.unsplash.com/photo-1572490122747-3968b75cc699?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80',
+                image: 'https://drive.google.com/uc?id=1229bi5PdK_keXYsS_-zSn--u3Bs7h8RQ',
                 badges: ['popular'],
                 hasSweetness: false
             },
@@ -2510,4 +2510,5 @@
         document.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
+
 </html>
