--- a/index.html
+++ b/index.html
@@ -1875,7 +1875,7 @@
                 description: 'Rich hot chocolate with chocolate sauce and brownie toppings. Served in an edible chocolate cup.',
                 descriptionMr: 'चॉकलेट सॉस आणि ब्राउनी टॉपिंगसह समृद्ध हॉट चॉकलेट. खाण्यायोग्य चॉकलेट कपमध्ये सर्व्ह केले.',
                 price: 50,
-                image: 'https://drive.google.com/uc?id=1229bi5PdK_keXYsS_-zSn--u3Bs7h8RQ',
+                image: 'https://i.ibb.co/7xkpTz2r/IMG-20251224-182925/hot-chocolate.jpg',
                 badges: ['popular'],
                 hasSweetness: false
             },
@@ -2512,3 +2512,4 @@
 </body>
 
 </html>
+
