--- a/index.html
+++ b/index.html
@@ -1875,8 +1875,7 @@
                 description: 'Rich hot chocolate with chocolate sauce and brownie toppings. Served in an edible chocolate cup.',
                 descriptionMr: 'चॉकलेट सॉस आणि ब्राउनी टॉपिंगसह समृद्ध हॉट चॉकलेट. खाण्यायोग्य चॉकलेट कपमध्ये सर्व्ह केले.',
                 price: 50,
-                image: 'https://i.ibb.co/99WkWq4d/IMG-20251225-174120/hot-chocolate.jpg'
-',
+                image: 'https://i.ibb.co/99WkWq4d/IMG-20251225-174120/hot-chocolate.jpg',
                 badges: ['popular'],
                 hasSweetness: false
             },
@@ -2511,7 +2510,4 @@
         document.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
-
 </html>
-
-
