Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1886,7 +1886,7 @@
                 description: 'Creamy hot caramel with caramel sauce and brownie topping. Served in an edible caramel cup.',
                 descriptionMr: 'कॅरमेल सॉस आणि ब्राउनी टॉपिंगसह क्रीमी हॉट कॅरमेल. खाण्यायोग्य कॅरमेल कपमध्ये सर्व्ह केले.',
                 price: 50,
-                image: 'https://images.unsplash.com/photo-1517701604599-bb29b565090c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80',
+                image: 'https://i.ibb.co/6cXq4CBs/IMG-20251224-182950/hot-caramel.jpg',
                 badges: ['new'],
                 hasSweetness: false
             },
@@ -2511,5 +2511,6 @@
     </script>
 </body>
 </html>
+
 
 
