Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1894,10 +1894,10 @@
                 id: 'coffee',
                 name: 'Mild Classic Coffee',
                 nameMr: 'माइल्ड क्लासिक कॉफी',
-                description: 'Perfect blend of premium coffee beans. Served in an edible coffee-flavored cup.',
+                description: 'Perfect blend of premium coffee beans. Served in an edible-flavored cup.',
                 descriptionMr: 'प्रीमियम कॉफी बीन्सचा परफेक्ट ब्लेंड. खाण्यायोग्य कॉफी-फ्लेवर कपमध्ये सर्व्ह केले.',
                 price: 40,
-                image: 'https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80',
+                image: 'https://i.ibb.co/zHX1ysNH/IMG-20251224-183454/coffee.jpg',
                 badges: ['classic'],
                 hasSweetness: true
             },
@@ -1905,7 +1905,7 @@
                 id: 'tea',
                 name: 'Indian Classical Kadak Tea',
                 nameMr: 'इंडियन क्लासिकल कडक चहा',
-                description: 'Authentic Indian tea with aromatic spices. Served in an edible masala tea cup.',
+                description: 'Authentic Indian tea with aromatic spices. Served in an edible-flavored cup',
                 descriptionMr: 'सुगंधित मसाल्यांसह ऑथेंटिक इंडियन चहा. खाण्यायोग्य मसाला चहा कपमध्ये सर्व्ह केले.',
                 price: 40,
                 image: 'https://images.unsplash.com/photo-1561047029-3000c68339ca?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80',
@@ -2511,6 +2511,7 @@
     </script>
 </body>
 </html>
+
 
 
 
