Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1908,7 +1908,7 @@
                 description: 'Authentic Indian tea with aromatic spices. Served in an edible-flavored cup',
                 descriptionMr: 'सुगंधित मसाल्यांसह ऑथेंटिक इंडियन चहा. खाण्यायोग्य मसाला चहा कपमध्ये सर्व्ह केले.',
                 price: 40,
-                image: 'https://images.unsplash.com/photo-1561047029-3000c68339ca?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80',
+                image: 'https://i.ibb.co/fGHLNq8S/IMG-20251224-183428/tea.jpg',
                 badges: ['traditional'],
                 hasSweetness: true
             }
@@ -2511,6 +2511,7 @@
     </script>
 </body>
 </html>
+
 
 
 
