--- a/index.html
+++ b/index.html
@@ -1580,7 +1580,7 @@
                 
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1514228742587-6b1558fcf93a?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="https://i.ibb.co/zTxHsspL/1766581181564/about.jpg" 
                              alt="Delicious edible cups on a wooden table" loading="lazy">
                     </div>
                     <div class="about-text">
@@ -2511,6 +2511,7 @@
     </script>
 </body>
 </html>
+
 
 
 
