Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -1672,7 +1672,7 @@
                 <div class="footer-social">
                     <h4 data-i18n="footer.social.title">Follow Us</h4>
                     <div class="social-icons">
-                        <a href="https://instagram.com/sipandcrunch" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+                        <a href="https://www.instagram.com/hello.sipandcrunch?igsh=Znd5aWx4bXc0Z2Vn" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
                         <a href="#" aria-label="Facebook">
@@ -1698,7 +1698,7 @@
         const CONFIG = {
             RAZORPAY_KEY: 'rzp_test_1DP5mmOlF5G5ag', // Test key - Replace with your actual key
             COMPANY_NAME: 'Sip&Crunch',
-            INSTAGRAM_URL: 'https://instagram.com/sipandcrunch',
+            INSTAGRAM_URL: 'https://www.instagram.com/hello.sipandcrunch?igsh=Znd5aWx4bXc0Z2Vn',
             WHATSAPP_NUMBER: '919999999999'
         };
 
@@ -2511,6 +2511,7 @@
     </script>
 </body>
 </html>
+
 
 
 
