--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
                             </div>
                             <div class="contact-details">
                                 <h4 data-i18n="contact.instagram.title">Follow on Instagram</h4>
-                                <a href="https://instagram.com/sipandcrunch" target="_blank" rel="noopener noreferrer" class="instagram-link">
+                                <a href="https://www.instagram.com/hello.sipandcrunch?igsh=Znd5aWx4bXc0Z2Vn" target="_blank" rel="noopener noreferrer" class="instagram-link">
                                     <i class="fab fa-instagram"></i>
                                     <span>@sipandcrunch</span>
                                 </a>
@@ -2511,6 +2511,7 @@
     </script>
 </body>
 </html>
+
 
 
 
